--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile 'com.android.support:design:25.2.0'
     testCompile 'junit:junit:4.12'
     compile 'com.google.android.gms:play-services-ads:9.0.1'
-    compile (name: 'theoremreach-3.1.2', ext: 'aar')
+    compile (name: 'theoremreach-release', ext: 'aar')
+//    compile (name: 'theoremreach-3.1.2', ext: 'aar')
 //    compile 'com.theoremreach:theoremreach:3.1.2'
 }
