--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,6 @@ dependencies {
     compile 'com.android.support:design:25.2.0'
     testCompile 'junit:junit:4.12'
     compile 'com.google.android.gms:play-services-ads:10.2.1'
-    compile (name: 'theoremreach-release', ext: 'aar')
 //    compile (name: 'theoremreach-3.1.4', ext: 'aar')
-//    compile 'com.theoremreach:theoremreach:3.1.4'
+    compile 'com.theoremreach:theoremreach:3.1.5'
 }
