--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,14 +18,17 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.preference:preference:1.1.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.appcompat:appcompat-resources:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
 
     implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.google.android.gms:play-services-base:18.0.1'
+    implementation 'com.google.android.gms:play-services-auth:20.2.0'
     implementation 'com.google.android.gms:play-services-ads:20.1.0'
 
-//    implementation 'com.theoremreach:theoremreach:3.4.6'
-    implementation project(':theoremreach')
+    implementation 'com.theoremreach:theoremreach:3.4.6'
+//    implementation project(':theoremreach')
 }
