android photo picker

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat-resources:1.4.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
+    implementation "androidx.activity:activity:1.7.0"
+    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
 
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'com.google.android.gms:play-services-base:18.1.0'
@@ -34,6 +36,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads:21.0.0'
     implementation 'com.google.android.play:review:2.0.0'
 //    implementation files('/Users/andykeller/Code/TheoremReach-Android-SDK/theoremreach/build/outputs/aar/theoremreach-3.5.3.aar')
-    implementation 'com.theoremreach:theoremreach:3.5.6'
+    implementation 'com.theoremreach:theoremreach:3.5.7'
 //    implementation project(':theoremreach')
 }
