--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:21.3.0'
     implementation 'com.google.android.gms:play-services-ads:21.0.0'
     implementation 'com.google.android.play:review:2.0.0'
-    implementation files('/Users/zia954/android_dev/TheoremReach-Android-SDK/theoremreach/build/outputs/aar/theoremreach-3.5.7.aar')
-//    implementation 'com.theoremreach:theoremreach:3.5.7'
+//    implementation files('/Users/zia954/android_dev/TheoremReach-Android-SDK/theoremreach/build/outputs/aar/theoremreach-3.5.7.aar')
+    implementation 'com.theoremreach:theoremreach:3.5.7'
 //    implementation project(':theoremreach')
 }
