--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,8 +32,10 @@ dependencies {
     implementation(platform('org.jetbrains.kotlin:kotlin-bom:1.8.0'))
     implementation 'com.google.android.material:material:1.6.1'
 
+    implementation 'io.adjoe:adjoe-sdk-android:3.3.2'
+
 //    implementation files('/Users/zia954/android_dev/AndroidSDK/theoremreach-3.5.7.aar')
-//    implementation files('/Users/andykeller/Code/TheoremReach-Android-SDK/theoremreach/build/outputs/aar/theoremreach-release.aar')
-    implementation 'com.theoremreach:theoremreach:3.6.5'
+    implementation files('/Users/andykeller/Code/TheoremReach-Android-SDK/theoremreach/build/outputs/aar/theoremreach-release.aar')
+//    implementation 'com.theoremreach:theoremreach:3.6.9'
 //    implementation project(':theoremreach')
 }
