--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,9 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven {
+            url = uri("https://releases.adjoe.io/maven")
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.1.0'
@@ -17,6 +20,9 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        maven {
+            url = uri("https://releases.adjoe.io/maven")
+        }
         flatDir {
             dirs 'libs'
         }
