--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     implementation 'io.adjoe:adjoe-sdk-android:3.4.0'
 
 //    implementation files('/Users/zia954/android_dev/AndroidSDK/theoremreach-3.5.7.aar')
-    implementation files('/Users/andykeller/Code/TheoremReach-Android-SDK/theoremreach/build/outputs/aar/theoremreach-release.aar')
-//    implementation 'com.theoremreach:theoremreach:3.6.9'
+//    implementation files('/Users/andykeller/Code/TheoremReach-Android-SDK/theoremreach/build/outputs/aar/theoremreach-release.aar')
+    implementation 'com.theoremreach:theoremreach:3.6.10'
 //    implementation project(':theoremreach')
 }
